# AFTEC

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  run_mock_sensor.py
.github/workflows/: ci.yml
src/aftec/core/: models.py
src/aftec/docs/: architecture.md
src/aftec/ingesters/: mock_ingester  mock_ingester.py
src/aftec/scripts/: run_ingester.py  run_mock_sensor.py  setup_db.py
tests/: test_mock_ingester.py
