[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aftec"
version = "0.1.0"
description = "AI Farming Technology - modular soil monitoring with anomaly detection"
readme = "README.md"
authors = [{ name = "Your Name", email = "amirjahazi47@gmail.com" }]
license = { text = "Apache-2.0 license" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache-2.0 license",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pyserial>=3.5",
    "streamlit>=1.25",
    "pandas>=2.0",
    "scipy>=1.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "pre-commit>=3.0",
]

[project.scripts]
aftec-ingester = "aftec.scripts.run_ingester:main"
aftec-mock = "aftec.scripts.run_mock_sensor:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["aftec*"]

[tool.black]
line-length = 99
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
